--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
         "sass": "^1.44.0",
         "stylelint": "^9.10.1",
         "stylelint-scss": "^3.5.4"
+    },
+    "dependencies": {
+        "handlebars": "^4.7.8"
     }
 }
